2003-04-11  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/ecutils.cpp, standalone/wxwin/ecutils.h: Create
	wxString wrappers for cygwin_conv_to_*_path().

	* standalone/wxwin/appsettings.cpp: Accommodate POSIX-style values of
	the ECOS_REPOSITORY environment variable.

2003-04-10  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/docsystem.cpp: Eliminate pop-up warning when
	attempting to create a directory under $HOME/.eCosDocs/ which already
	exists.

2003-04-07  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/appsettings.cpp,
	  standalone/wxwin/appsettings.h: Look for user tools and build
	tools relative to the configtool executable file.

2003-04-05  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/makefile.gnu: Build Cygwin hosted configtool with
	"--subsystem windows" to eliminate the console window.

	* standalone/wxwin/admindlg.cpp: Strip CR characters from the license
	text on Linux.

2003-03-28  John Dallaway  <jld@ecoscentric.com>

	* standalone/common/ecosconfig.cxx, standalone/wxwin/symbols.h:
	Use a generic 2.net version string by default.

	* standalone/wxwin/packagesdlg.cpp: Fix population of package lists
	to ensure the last package is seen. [ Bugzilla 87520 ]

2003-03-26  Bart Veer  <bartv@ecoscentric.com>

	* common/common/build.cxx: There is no longer a single repository,
	instead each package can come from different repositories.

2003-03-26  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/makefile.gnu: Tidy up.

	* standalone/wxwin/splittree.cpp: Fix wxRemotelyScrolledTreeCtrl for
	wxWindows 2.4.0 on Linux/GTK. Patch contributed by Julian Smart.

2003-03-25  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/symbols.h,
	  standalone/wxwin/aboutdlg.cpp,
	  standalone/wxwin/configtool.cpp,
	  standalone/wxwin/mainwin.cpp: Use a character string to represent
	the configtool version number.

	* standalone/wxwin/runtestsdlg.cpp: Remove CR characters in test
	output. [ Bugzilla 85163 ]
